--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <Link rel="stylesheet" href="/assets/css/contact.css" type="text/css">
+    <Link rel="stylesheet" href="/css/contact.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -14,7 +14,7 @@
         <h1>Software Developer</h1>
         </div>
     </header> 
-    <img src="/assets/images/Contact-Information.jpg">
+    <img src="/images/Contact-Information.jpg">
     </div>
     
     <footer>
