--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/assets/css/about.css" type="text/css">
+    <link rel="stylesheet" href="/css/about.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
@@ -54,7 +54,7 @@
     <h1> About</h1>
     
     </div>
-    <img src="/assets/images/software-engineering-software-design2.png">
+    <img src="/images/software-engineering-software-design2.png">
    
  <div class="container1">
     <p>
