--- a/about.html
+++ b/about.html
@@ -64,7 +64,14 @@
         My hobbies include:playing tennis,baking and taking siestas.
         I'm looking to better my skills and grow my abilities.
         My long term plan is to become a fully pledged lawyer with a tech background.
+        
    </p>
+   <style>
+    body {
+      background-image: url(images/pngtree-flat-business-style-banner-picture-image_1020686.jpg);
+      background-repeat: repeat;
+    }
+   </style>
  </div>
 </body>
 </html>
