--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,12 @@
          <a href="https://www.instagram.com/">Instagram</a>
          <a href="https://www.pinterest.com/">pinterest</a>
     </footer>
+    <style>
+        body {
+            background-image: url(images/Contact-us.gif);
+        
+        }
+    </style>
     
 </body>
 </html>
