--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             body {
                 background-image: url(images/_.jpeg);
                 background-attachment: fixed;
+                background-repeat: repeat;
             }
 
         
