--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@
     body {
       background-image: url(images/pngtree-flat-business-style-banner-picture-image_1020686.jpg);
       background-repeat: repeat;
+      background-attachment: fixed;
     }
    </style>
  </div>
