--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
     <style>
         body {
             background-image: url(images/Contact-us.gif);
+            background-attachment: fixed;
         
         }
     </style>
