--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       nav {
         color: mistyrose;
       }
+      body {
+        background-image: url(images/_.jpeg)
+        background-repeat: repeat;
+        background-attachment: fixed;
+      }
+      
     </style>
 
 
@@ -78,13 +84,7 @@
     </footer>
 
   </div>
-  <style>
-    body {
-      background-image: url(images/_.jpeg);
-      background-attachment: fixed;
-      background-repeat: repeat;
-    }
-  </style>
+  
 
 </body>
 
