--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         color: mistyrose;
       }
       body {
-        background-image: url(images/_.jpeg)
+        background-image: url(images/index.jpg);
         background-repeat: repeat;
         background-attachment: fixed;
       }
