--- a/about.html
+++ b/about.html
@@ -19,17 +19,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class=" nav-link active" href="https://gitaunthama.github.io/Personal-Porfolio/">Link</a>
+                <a class=" nav-link active" aria-current="page" href="https://gitaunthama.github.io/Personal-Porfolio/"> Page Link</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/index.html">Home</a></li>
+                  <li><a class="dropdown-item" href="index.html">Home</a></li>
                   <li><a class="dropdown-item" href="about.html">About</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="contact.html">Contact</a></li>
